# ai-screen-studio

./: .gitignore  PLAN.md  README.md  pyproject.toml
Reframed.xcodeproj/: project.pbxproj
Reframed/Editor/: CameraRegionEditPopover.swift  PropertiesPanel+CameraTab.swift  PropertiesPanel+CaptionsTab.swift  VideoPreviewView.swift
Reframed/Project/: ReframedProject.swift
Reframed/Recording/: FileManager+Reframed.swift
Reframed/State/: SessionState.swift
Reframed/UI/: Constants.swift  TailwindColorPicker.swift
instruction_video_generator/: __init__.py  browser_runner.py  cli.py  llm_factory.py  models.py  narration.py  pipeline.py  settings.py  video_editor.py  web.py  webapp.py
tests/: test_browser_runner.py  test_llm_factory.py  test_models.py  test_narration.py  test_pipeline.py  test_video_editor.py  test_webapp.py
